apps/linkding/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: linkding-rt
  namespace: linkding
spec:
  parentRefs:
    - name: internal-gateway # Change to 'external-gateway' if public
      namespace: traefik
  hostnames:
    - "linkding.athanor.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: linkding # Matches the Service name generated by the chart
          port: 9090
